# zeraora

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: publish.yml  publish_test.yml  python-publish.yml  release.yml
docs/: README.md  conf.py  converters.rst  generators.rst  index.rst  structures.rst  throwables.rst  typeclasses.rst  utils.rst
docs/zeraora/: BearTimer.md  OnionObject.md  ReprMixin.md
tests/: base_test_case.py  test_area.py  test_binary.py  test_converters.py  test_datetime.py  test_daytime.py  test_defence.py  test_enum.py  test_enums.py  test_jsonic.py  test_math.py  test_maths.py  test_string.py  test_structures.py  test_time.py  test_typeclasses.py  test_typing.py  test_utils.py
zeraora/: __init__.py  area.py  binary.py  charsets.py  checkers.py  choices.py  code.py  config.py  constants.py  converters.py  datetime.py  daytime.py  decorators.py  defence.py  divisions.py  django.py  drf.py  enum.py  enums.py  filepath.py  generators.py  gvs.py  http.py  jsonic.py  log.py  logx.py  math.py  maths.py  random.py  requests.py  shortcuts.py  snowflake.py  string.py  structures.py  throwables.py  time.py  timer.py  times.py  typeclasses.py  typing.py  (+3 more)
zeraora/click/: __init__.py  decorators.py
zeraora/constants/: __init__.py  chores.py  configs.py  division.py  enumerations.py  months.py  times.py  timezones.py  weeks.py
zeraora/dj/: __init__.py  fields.py  lookups.py  managers.py  models.py
zeraora/django/: __init__.py  fields.py  lookups.py  managers.py  (+1 more)
(+9 files in other folders)
