[project]
name = "Zeraora"
dynamic = ["version"]
authors = [
    { name = "aixcyi", email = "75880483+aixcyi@users.noreply.github.com" },
]
description = "一个包含原创工具类及快捷函数的工具库。A original utility Python package."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Natural Language :: Chinese (Simplified)",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
"Homepage" = "https://github.com/aixcyi/zeraora"
"Bug Tracker" = "https://github.com/aixcyi/zeraora/issues"
"Source" = "https://github.com/aixcyi/zeraora"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "zeraora.version"}
